tests/ui/cases/device_definition_errors/diagnostics.txt
  error: Unexpected node
   ╭─[cases/device_definition_errors/input.kdl:1:1]
 1 │ a 1
   · ┬
   · ╰── The unexpected node
 2 │ 
   ╰────
  help: Expected a node with one of these names: `device`, `fieldset`, `enum`, `extern`

  error: Missing object name
   ╭─[cases/device_definition_errors/input.kdl:3:1]
 2 │ 
 3 │ device {
   · ───┬──
   ·    ╰── For this object
 4 │ 
   ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `device Foo { }`

  error: Missing object name
   ╭─[cases/device_definition_errors/input.kdl:7:1]
 6 │ 
 7 │ device 1 {
   · ───┬── ┬
   ·    │   ╰── Found this entry instead which is not a valid name
   ·    ╰── For this object
 8 │ 
   ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `device Foo { }`

  warning: Empty node
    ╭─[cases/device_definition_errors/input.kdl:11:1]
 10 │     
 11 │ ╭─▶ device FooD0 {
 12 │ │   
 13 │ ├─▶ }
    · ╰──── The empty node
 14 │     
    ╰────
  help: This type of node should have children to specify what it contains

  error: Unexpected entries
    ╭─[cases/device_definition_errors/input.kdl:15:14]
 14 │ 
 15 │ device FooD1 abc def {
    ·              ─┬─ ─┬─
    ·               │   ╰── This entry is unexpected
    ·               ╰── This entry is unexpected
 16 │ 
    ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

  warning: Empty node
    ╭─[cases/device_definition_errors/input.kdl:15:1]
 14 │     
 15 │ ╭─▶ device FooD1 abc def {
 16 │ │   
 17 │ ├─▶ }
    · ╰──── The empty node
 18 │     
    ╰────
  help: This type of node should have children to specify what it contains

  error: Unexpected node
    ╭─[cases/device_definition_errors/input.kdl:20:5]
 19 │ device FooD2 {
 20 │     blah 123
    ·     ──┬─
    ·       ╰── The unexpected node
 21 │ }
    ╰────
  help: Expected a node with one of these names: `register-access`, `field-access`, `buffer-access`, `byte-order`,
        `bit-order`, `register-address-type`, `command-address-type`, `buffer-address-type`, `name-word-boundaries`,
        `defmt-feature`, `block`, `register`, `command`, `buffer`, `fieldset`, `enum`, `extern`

  error: Duplicate node
    ╭─[cases/device_definition_errors/input.kdl:25:5]
 23 │ device FooD3 {
 24 │     register-access RW
    ·     ─────────┬────────
    ·              ╰── The original node
 25 │     register-access RO
    ·     ─────────┬────────
    ·              ╰── The duplicate node
 26 │ }
    ╰────
  help: This type of node can only appear once. Try removing one of the nodes

  error: Unexpected value
    ╭─[cases/device_definition_errors/input.kdl:29:21]
 28 │ device FooD4 {
 29 │     register-access Blah
    ·                     ──┬─
    ·                       ╰── Expected one of these values: `RW`, `RO`, `WO`
 30 │     buffer-access
    ╰────

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:30:5]
 29 │     register-access Blah
 30 │     buffer-access
    ·     ──────┬──────
    ·           ╰── This node should have one or more of these entries: `RW`, `RO`, `WO`
 31 │     field-access RW RO WO
    ╰────
  help: Check the book for all the requirements

  error: Unexpected entries
    ╭─[cases/device_definition_errors/input.kdl:31:21]
 30 │     buffer-access
 31 │     field-access RW RO WO
    ·                     ─┬ ─┬
    ·                      │  ╰── This entry is unexpected
    ·                      ╰── This entry is unexpected
 32 │ }
    ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

  error: Unexpected entries
    ╭─[cases/device_definition_errors/input.kdl:35:21]
 34 │ device FooD5 {
 35 │     register-access value=RW
    ·                     ────┬───
    ·                         ╰── This entry was expected to be anonymous
 36 │     register-address-type u8
    ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:35:5]
 34 │ device FooD5 {
 35 │     register-access value=RW
    ·     ───────┬───────
    ·            ╰── This node should have one or more of these entries: `RW`, `RO`, `WO`
 36 │     register-address-type u8
    ╰────
  help: Check the book for all the requirements

  error: Unexpected type
    ╭─[cases/device_definition_errors/input.kdl:37:26]
 36 │     register-address-type u8
 37 │     command-address-type 16
    ·                          ─┬
    ·                           ╰── Unexpected type: expected a string
 38 │     bit-order msb0
    ╰────

  error: Unexpected value
    ╭─[cases/device_definition_errors/input.kdl:38:15]
 37 │     command-address-type 16
 38 │     bit-order msb0
    ·               ──┬─
    ·                 ╰── Expected one of these values: `LSB0`, `MSB0`
 39 │     defmt-feature lol
    ╰────

  error: Unexpected node
    ╭─[cases/device_definition_errors/input.kdl:49:5]
 48 │ 
 49 │     registah
    ·     ────┬───
    ·         ╰── The unexpected node
 50 │     register
    ╰────
  help: Expected a node with one of these names: `register-access`, `field-access`, `buffer-access`, `byte-order`,
        `bit-order`, `register-address-type`, `command-address-type`, `buffer-address-type`, `name-word-boundaries`,
        `defmt-feature`, `block`, `register`, `command`, `buffer`, `fieldset`, `enum`, `extern`

  error: Missing object name
    ╭─[cases/device_definition_errors/input.kdl:50:5]
 49 │     registah
 50 │     register
    ·     ────┬───
    ·         ╰── For this object
 51 │     register foor1 {
    ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `register Foo { }`

  error: Missing child node
    ╭─[cases/device_definition_errors/input.kdl:51:14]
 50 │     register
 51 │     register foor1 {
    ·              ──┬──
    ·                ╰── This register is missing the required `address` node
 52 │ 
    ╰────
  help: Check the book to see all required nodes

  error: Missing child node
    ╭─[cases/device_definition_errors/input.kdl:51:14]
 50 │     register
 51 │     register foor1 {
    ·              ──┬──
    ·                ╰── This register is missing the required `fields` node
 52 │ 
    ╰────
  help: Check the book to see all required nodes

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:55:9]
 54 │     register foor2 {
 55 │         address
    ·         ───┬───
    ·            ╰── This node should have one or more of these entries: `integer`
 56 │         address a
    ╰────
  help: Check the book for all the requirements

  error: Unexpected type
    ╭─[cases/device_definition_errors/input.kdl:56:17]
 55 │         address
 56 │         address a
    ·                 ┬
    ·                 ╰── Unexpected type: expected a integer
 57 │         address 1
    ╰────

  error: Duplicate node
    ╭─[cases/device_definition_errors/input.kdl:58:9]
 56 │         address a
 57 │         address 1
    ·         ───┬───
    ·            ╰── The original node
 58 │         address 2
    ·         ───┬───
    ·            ╰── The duplicate node
 59 │         repeat
    ╰────
  help: This type of node can only appear once. Try removing one of the nodes

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:59:9]
 58 │         address 2
 59 │         repeat
    ·         ───┬──
    ·            ╰── This node should have one or more of these entries: `count=<integer>`, `with=<string>`, `stride=<integer>`
 60 │         reset-value 0x2000_0000
    ╰────
  help: Check the book for all the requirements

  error: Missing child node
    ╭─[cases/device_definition_errors/input.kdl:54:14]
 53 │     }
 54 │     register foor2 {
    ·              ──┬──
    ·                ╰── This register is missing the required `fields` node
 55 │         address
    ╰────
  help: Check the book to see all required nodes

  error: Value out of range
    ╭─[cases/device_definition_errors/input.kdl:64:16]
 63 │         address -1
 64 │         repeat count=18_446_744_073_709_551_616 stride=1
    ·                ────────────────┬───────────────
    ·                                ╰── Value is out of the allowable range: 0..2^64
 65 │         allow-address-overlap #true
    ╰────
  help: The count is encoded as a u64

  error: Unexpected entries
    ╭─[cases/device_definition_errors/input.kdl:65:31]
 64 │         repeat count=18_446_744_073_709_551_616 stride=1
 65 │         allow-address-overlap #true
    ·                               ──┬──
    ·                                 ╰── This entry is unexpected
 66 │         reset-value 0x100 0x00
    ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

  error: Value out of range
    ╭─[cases/device_definition_errors/input.kdl:66:21]
 65 │         allow-address-overlap #true
 66 │         reset-value 0x100 0x00
    ·                     ──┬──
    ·                       ╰── Value is out of the allowable range: 0..256
 67 │     }
    ╰────
  help: When specifying the reset values as an array, all numbers must be bytes

  error: Missing child node
    ╭─[cases/device_definition_errors/input.kdl:62:14]
 61 │     }
 62 │     register foor3 {
    ·              ──┬──
    ·                ╰── This register is missing the required `fields` node
 63 │         address -1
    ╰────
  help: Check the book to see all required nodes

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:70:9]
 69 │         address 0
 70 │         fields {
    ·         ───┬──
    ·            ╰── This node should have one or more of these entries: `size-bits=<integer>`
 71 │ 
    ╰────
  help: Check the book for all the requirements

  error: Value out of range
    ╭─[cases/device_definition_errors/input.kdl:76:16]
 75 │         address 1
 76 │         fields size-bits=-1 {
    ·                ──────┬─────
    ·                      ╰── Value is out of the allowable range: 0..2^32
 77 │ 
    ╰────
  help: size-bits is encoded as a u32

  error: Duplicate entry
    ╭─[cases/device_definition_errors/input.kdl:82:55]
 81 │         address 2
 82 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                                        ───────┬────── ──────┬──────
    ·                                               │             ╰── The duplicate entry
    ·                                               ╰── The original entry
 83 │ 
    ╰────
  help: This type of entry can only appear once. Try removing one of the entries

  error: Duplicate entry
    ╭─[cases/device_definition_errors/input.kdl:82:83]
 81 │         address 2
 82 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                                                                     ──────┬────── ───────┬──────
    ·                                                                           │              ╰── The duplicate entry
    ·                                                                           ╰── The original entry
 83 │ 
    ╰────
  help: This type of entry can only appear once. Try removing one of the entries

  error: Duplicate entry
    ╭─[cases/device_definition_errors/input.kdl:82:116]
 81 │         address 2
 82 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                                                                                                  ────────┬──────── ────────────┬───────────
    ·                                                                                                          │                     ╰── The duplicate entry
    ·                                                                                                          ╰── The original entry
 83 │ 
    ╰────
  help: This type of entry can only appear once. Try removing one of the entries

  error: Value out of range
    ╭─[cases/device_definition_errors/input.kdl:82:16]
 81 │         address 2
 82 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                ───────────┬───────────
    ·                           ╰── Value is out of the allowable range: 0..2^32
 83 │ 
    ╰────
  help: size-bits is encoded as a u32

  error: Unexpected value
    ╭─[cases/device_definition_errors/input.kdl:82:40]
 81 │         address 2
 82 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                                        ───────┬──────
    ·                                               ╰── Expected one of these values: `LE`, `BE`
 83 │ 
    ╰────

  error: Unexpected value
    ╭─[cases/device_definition_errors/input.kdl:82:69]
 81 │         address 2
 82 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                                                                     ──────┬──────
    ·                                                                           ╰── Expected one of these values: `LSB0`, `MSB0`
 83 │ 
    ╰────

  error: Value out of range
    ╭─[cases/device_definition_errors/input.kdl:88:16]
 87 │         address 3
 88 │         fields size-bits=0x1_0000_0000 byte-order=1 bit-order=#true allow-bit-overlap  {
    ·                ───────────┬───────────
    ·                           ╰── Value is out of the allowable range: 0..2^32
 89 │ 
    ╰────
  help: size-bits is encoded as a u32

  error: Unexpected type
    ╭─[cases/device_definition_errors/input.kdl:88:40]
 87 │         address 3
 88 │         fields size-bits=0x1_0000_0000 byte-order=1 bit-order=#true allow-bit-overlap  {
    ·                                        ──────┬─────
    ·                                              ╰── Unexpected type: expected a string
 89 │ 
    ╰────

  error: Unexpected type
    ╭─[cases/device_definition_errors/input.kdl:88:53]
 87 │         address 3
 88 │         fields size-bits=0x1_0000_0000 byte-order=1 bit-order=#true allow-bit-overlap  {
    ·                                                     ───────┬───────
    ·                                                            ╰── Unexpected type: expected a string
 89 │ 
    ╰────

  error: Duplicate entry
    ╭─[cases/device_definition_errors/input.kdl:97:20]
 96 │         fields CustomFieldSetName size-bits=8 {
 97 │             bar RW RO
    ·                 ─┬ ─┬
    ·                  │  ╰── The duplicate entry
    ·                  ╰── The original entry
 98 │             bar @a @-1:8 @3 @3:0
    ╰────
  help: This type of entry can only appear once. Try removing one of the entries

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:97:13]
 96 │         fields CustomFieldSetName size-bits=8 {
 97 │             bar RW RO
    ·             ─┬─
    ·              ╰── This node should have one or more of these entries: `address ("@<u32>:<u32>")`
 98 │             bar @a @-1:8 @3 @3:0
    ╰────
  help: Check the book for all the requirements

  error: Bad format
    ╭─[cases/device_definition_errors/input.kdl:98:17]
 97 │             bar RW RO
 98 │             bar @a @-1:8 @3 @3:0
    ·                 ─┬
    ·                  ╰── Value could not be parsed correctly. Use the following format: `@<u32>`
 99 │             baz @7:4 blah
    ╰────
  help: An example: `@10`

  error: Bad format
    ╭─[cases/device_definition_errors/input.kdl:98:20]
 97 │             bar RW RO
 98 │             bar @a @-1:8 @3 @3:0
    ·                    ──┬──
    ·                      ╰── Value could not be parsed correctly. Use the following format: `@<u32>:<u32>`
 99 │             baz @7:4 blah
    ╰────
  help: An example: `@7:0`

  error: Duplicate entry
    ╭─[cases/device_definition_errors/input.kdl:98:29]
 97 │             bar RW RO
 98 │             bar @a @-1:8 @3 @3:0
    ·                          ─┬ ──┬─
    ·                           │   ╰── The duplicate entry
    ·                           ╰── The original entry
 99 │             baz @7:4 blah
    ╰────
  help: This type of entry can only appear once. Try removing one of the entries

  error: Unexpected value
     ╭─[cases/device_definition_errors/input.kdl:99:22]
  98 │             bar @a @-1:8 @3 @3:0
  99 │             baz @7:4 blah
     ·                      ──┬─
     ·                        ╰── Expected one of these values: `@<u32>`, `@<u32>:<u32>`, `count=<integer>`, `with=<string>`, `stride=<integer>`, `RW`, `RO`, `WO`
 100 │         }
     ╰────

  error: Unexpected value
     ╭─[cases/device_definition_errors/input.kdl:107:14]
 106 │             (uint)baz @2:1
 107 │             (i16a)quux @4:3
     ·              ──┬─
     ·                ╰── Expected one of these values: `bool`, `uint`, `int`, `u8`, `u16`, `u32`, `u64`, `i8`, `i16`, `i32`, `i64`, `<base>:<target>`, `<base>:<target>?`
 108 │             (i32:e3?)qus @6:5
     ╰────

  error: Inline enum definition without name
     ╭─[cases/device_definition_errors/input.kdl:121:13]
 120 │             }
 121 │             baz @3:2 {
     ·             ─┬─
     ·              ╰── Add conversion type specification to this field
 122 │ 
     ╰────
  help: An inline enum definition is only possible when a conversion is specified, for example: `(uint:EnumName)`

  error: Inline enum definition without name
     ╭─[cases/device_definition_errors/input.kdl:124:14]
 123 │             }
 124 │             (uint)bam @5:4 {
     ·              ──┬─ ─┬─
     ·                │   ╰── Add conversion type specification to this field
     ·                ╰── A type specifier already exists, but misses the conversion
 125 │ 
     ╰────
  help: An inline enum definition is only possible when a conversion is specified, for example: `(uint:EnumName)`

  error: Unexpected value
     ╭─[cases/device_definition_errors/input.kdl:129:19]
 128 │                 A
 129 │                 B 1.0
     ·                   ─┬─
     ·                    ╰── Expected one of these values: ``, `<integer>`, `default`, `catch-all`
 130 │                 C value
     ╰────

  error: Unexpected value
     ╭─[cases/device_definition_errors/input.kdl:130:19]
 129 │                 B 1.0
 130 │                 C value
     ·                   ──┬──
     ·                     ╰── Expected one of these values: ``, `<integer>`, `default`, `catch-all`
 131 │                 D #null 2
     ╰────

  error: Unexpected entries
     ╭─[cases/device_definition_errors/input.kdl:131:25]
 130 │                 C value
 131 │                 D #null 2
     ·                         ┬
     ·                         ╰── This entry is unexpected
 132 │             }
     ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

  error: Unexpected value
     ╭─[cases/device_definition_errors/input.kdl:131:19]
 130 │                 C value
 131 │                 D #null 2
     ·                   ──┬──
     ·                     ╰── Expected one of these values: ``, `<integer>`, `default`, `catch-all`
 132 │             }
     ╰────

  error: Missing object name
     ╭─[cases/device_definition_errors/input.kdl:135:5]
 134 │     }
 135 │     command {
     ·     ───┬───
     ·        ╰── For this object
 136 │ 
     ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `command Foo { }`

  error: Missing child node
     ╭─[cases/device_definition_errors/input.kdl:138:13]
 137 │     }
 138 │     command fooc0 {
     ·             ──┬──
     ·               ╰── This command is missing the required `address` node
 139 │ 
     ╰────
  help: Check the book to see all required nodes

  error: Missing entry
     ╭─[cases/device_definition_errors/input.kdl:143:9]
 142 │         address 0
 143 │         repeat
     ·         ───┬──
     ·            ╰── This node should have one or more of these entries: `count=<integer>`, `with=<string>`, `stride=<integer>`
 144 │         blah
     ╰────
  help: Check the book for all the requirements

  error: Unexpected node
     ╭─[cases/device_definition_errors/input.kdl:144:9]
 143 │         repeat
 144 │         blah
     ·         ──┬─
     ·           ╰── The unexpected node
 145 │         in {
     ╰────
  help: Expected a node with one of these names: `allow-address-overlap`, `address`, `repeat`, `in`, `out`

  error: Missing entry
     ╭─[cases/device_definition_errors/input.kdl:145:9]
 144 │         blah
 145 │         in {
     ·         ─┬
     ·          ╰── This node should have one or more of these entries: `size-bits=<integer>`
 146 │ 
     ╰────
  help: Check the book for all the requirements

  error: Address specified in wrong order
     ╭─[cases/device_definition_errors/input.kdl:150:15]
 149 │             b @0
 150 │             c @1:2
     ·               ──┬─
     ·                 ╰── Wrong order, try to change to `@2:1`
 151 │         }
     ╰────
  help: Addresses are specified with the high bit first and the low bit last

  error: Missing entry
     ╭─[cases/device_definition_errors/input.kdl:150:13]
 149 │             b @0
 150 │             c @1:2
     ·             ┬
     ·             ╰── This node should have one or more of these entries: `address ("@<u32>:<u32>")`
 151 │         }
     ╰────
  help: Check the book for all the requirements

  error: Missing object name
     ╭─[cases/device_definition_errors/input.kdl:153:5]
 152 │     }
 153 │     buffer {
     ·     ───┬──
     ·        ╰── For this object
 154 │ 
     ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `buffer Foo { }`

  error: Missing child node
     ╭─[cases/device_definition_errors/input.kdl:156:12]
 155 │     }
 156 │     buffer foob0 {
     ·            ──┬──
     ·              ╰── This register is missing the required `address` node
 157 │ 
     ╰────
  help: Check the book to see all required nodes

  error: Unexpected node
     ╭─[cases/device_definition_errors/input.kdl:161:9]
 160 │         address 0
 161 │         addressssss 500
     ·         ─────┬─────
     ·              ╰── The unexpected node
 162 │         address 1
     ╰────
  help: Expected a node with one of these names: `access`, `address`

  error: Duplicate node
     ╭─[cases/device_definition_errors/input.kdl:162:9]
 159 │     buffer foob1 {
 160 │         address 0
     ·         ───┬───
     ·            ╰── The original node
 161 │         addressssss 500
 162 │         address 1
     ·         ───┬───
     ·            ╰── The duplicate node
 163 │     }
     ╰────
  help: This type of node can only appear once. Try removing one of the nodes

  error: Unexpected value
     ╭─[cases/device_definition_errors/input.kdl:166:16]
 165 │         address 2
 166 │         access BLAH
     ·                ──┬─
     ·                  ╰── Expected one of these values: `RW`, `RO`, `WO`
 167 │         access RO
     ╰────

  error: Missing object name
     ╭─[cases/device_definition_errors/input.kdl:169:5]
 168 │     }
 169 │     block
     ·     ──┬──
     ·       ╰── For this object
 170 │     /// This is a block
     ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `block Foo { }`

  error: Unexpected node
     ╭─[cases/device_definition_errors/input.kdl:172:9]
 171 │     block b1 {
 172 │         foo
     ·         ─┬─
     ·          ╰── The unexpected node
 173 │         offset d
     ╰────
  help: Expected a node with one of these names: `offset`, `repeat`, `block`, `register`, `command`, `buffer`,
        `fieldset`, `enum`, `extern`

  error: Unexpected type
     ╭─[cases/device_definition_errors/input.kdl:173:16]
 172 │         foo
 173 │         offset d
     ·                ┬
     ·                ╰── Unexpected type: expected a integer
 174 │         offset 5
     ╰────

  error: Duplicate node
     ╭─[cases/device_definition_errors/input.kdl:175:9]
 173 │         offset d
 174 │         offset 5
     ·         ───┬──
     ·            ╰── The original node
 175 │         offset 20
     ·         ───┬──
     ·            ╰── The duplicate node
 176 │     }
     ╰────
  help: This type of node can only appear once. Try removing one of the nodes

  error: Missing entry
     ╭─[cases/device_definition_errors/input.kdl:178:9]
 177 │     block b2 {
 178 │         repeat
     ·         ───┬──
     ·            ╰── This node should have one or more of these entries: `count=<integer>`, `with=<string>`, `stride=<integer>`
 179 │         repeat count=2 stride=4
     ╰────
  help: Check the book for all the requirements

  error: Missing object name
     ╭─[cases/device_definition_errors/input.kdl:185:5]
 184 │     }
 185 │     fieldset
     ·     ────┬───
     ·         ╰── For this object
 186 │     fieldset fs1 size-bits=16 byte-order=LE {
     ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `fieldset Foo { }`

  error: Missing entry
     ╭─[cases/device_definition_errors/input.kdl:185:5]
 184 │     }
 185 │     fieldset
     ·     ────┬───
     ·         ╰── This node should have one or more of these entries: `size-bits=<integer>`
 186 │     fieldset fs1 size-bits=16 byte-order=LE {
     ╰────
  help: Check the book for all the requirements

  error: Missing object name
     ╭─[cases/device_definition_errors/input.kdl:189:5]
 188 │     }
 189 │     enum
     ·     ──┬─
     ·       ╰── For this object
 190 │     enum e1 {
     ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `enum Foo { }`

  error: Unexpected value
     ╭─[cases/device_definition_errors/input.kdl:192:11]
 191 │         A
 192 │         B 1.0
     ·           ─┬─
     ·            ╰── Expected one of these values: ``, `<integer>`, `default`, `catch-all`
 193 │         C value
     ╰────

  error: Unexpected value
     ╭─[cases/device_definition_errors/input.kdl:193:11]
 192 │         B 1.0
 193 │         C value
     ·           ──┬──
     ·             ╰── Expected one of these values: ``, `<integer>`, `default`, `catch-all`
 194 │         D #null 2
     ╰────

  error: Unexpected entries
     ╭─[cases/device_definition_errors/input.kdl:194:17]
 193 │         C value
 194 │         D #null 2
     ·                 ┬
     ·                 ╰── This entry is unexpected
 195 │     }
     ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

  error: Unexpected value
     ╭─[cases/device_definition_errors/input.kdl:194:11]
 193 │         C value
 194 │         D #null 2
     ·           ──┬──
     ·             ╰── Expected one of these values: ``, `<integer>`, `default`, `catch-all`
 195 │     }
     ╰────

  error: Missing object name
     ╭─[cases/device_definition_errors/input.kdl:206:5]
 205 │     }
 206 │     extern
     ·     ───┬──
     ·        ╰── For this object
 207 │     (i16:something?)extern etype1 a
     ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `extern Foo { }`

  error: Only base type allowed
     ╭─[cases/device_definition_errors/input.kdl:207:6]
 206 │     extern
 207 │     (i16:something?)extern etype1 a
     ·      ───────┬──────
     ·             ╰── Type specifier contains conversion
 208 │     /// Some docs over here!
     ╰────
  help: This object doesn't support the conversion syntax. Just specify the base type and remove the `:something?`

  error: Unexpected entries
     ╭─[cases/device_definition_errors/input.kdl:207:35]
 206 │     extern
 207 │     (i16:something?)extern etype1 a
     ·                                   ┬
     ·                                   ╰── This entry was expected to have a name (and not be anonymous)
 208 │     /// Some docs over here!
     ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

  error: Missing entry
     ╭─[cases/device_definition_errors/input.kdl:216:9]
 215 │     fieldset fs3 size-bits=32 byte-order=LE {
 216 │         val0 @1:0 with=e3
     ·         ──┬─
     ·           ╰── This node should have one or more of these entries: `stride=<integer>`
 217 │         val1 @3:2 with=e3 stride=2
     ╰────
  help: Check the book for all the requirements

  error: Missing entry
     ╭─[cases/device_definition_errors/input.kdl:219:9]
 218 │         val2 @7:6 count=4 stride=2
 219 │         val3 @15:14 stride=0
     ·         ──┬─
     ·           ╰── This node should have one or more of these entries: `count=<integer>`, `with=<string>`
 220 │     }
     ╰────
  help: Check the book for all the requirements

  error: Value out of range
     ╭─[cases/device_definition_errors/input.kdl:219:21]
 218 │         val2 @7:6 count=4 stride=2
 219 │         val3 @15:14 stride=0
     ·                     ────┬───
     ·                         ╰── Value is out of the allowable range: any non-0 number
 220 │     }
     ╰────
  help: The stride must not be 0

